started work on a server-side cucumber formatter